<resources>
    <string name="app_name">My Project</string>

    <string name="skip_btn">Lewati</string>
    <string name="next_btn">Next</string>
    <string name="get_started_btn">Lets Get Started</string>
    <string name="get_started">AYO MULAI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">684661492320795</string>
    <string name="fb_login_protocol_scheme">fb684661492320795</string>
    <string name="search_hint">Search...</string>
    <string name="login_title">Ayo ikuti kami,\nLogin ke Ayo Piknik</string>
    <string name="login_title_2">Log In untuk Melanjutkan</string>
    <string name="username_hint">E-mail/</string>
    <string name="hint_password">Password</string>
    <string name="login_to_sign_up">Belum memiliki akun?,</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="registration_title">Daftarkan akun Anda Untuk Bergabung Ayo Piknik</string>
    <string name="registration_title_2">Daftarkan Akun Anda</string>
    <string name="have_account">Sudah memiliki akun?,</string>
    <string name="not_found">TIDAK DITEMUKAN</string>
    <string name="welcome">Hello, Selamat Datang</string>
    <string name="welcome_details">Ayo Piknik Selalu Setia Menemani Perjalanan Anda</string>
    <string name="attraction_home">Tempat Wisata Terdekat</string>
    <string name="view_all">Lihat Semua</string>
    <string name="attraction_home_detail">Temukan Tempat Wisata Favorit Kamu Sekarang</string>
    <string name="hotel">Hotel</string>
    <string name="hotels_home_details">Berikut merupakan beberapa rekomendasi hotel buat kamu</string>
    <string name="restaurant">Tempat Makan</string>
    <string name="restaurant_home_details">Temukan restaurant favorit kamu dan makanan favorit kamu sekarang</string>
    <string name="nearby_search_hint">Temukan Tempat Favorit Kamu...</string>
    <string name="attraction">Wisata</string>
    <string name="profile_name">Nama Profil</string>
    <string name="log_out_all_caps">LOG IN</string>
    <string name="details">Detail</string>
    <string name="info">Info</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="e_mail">E-mail</string>
    <string name="setting">Pengaturan</string>
    <string name="language">Bahasa</string>
    <string name="contact_us">Kontak Kami</string>
    <string name="ayo_piknik">Ayo Piknik Contact</string>
    <string name="name">Nama</string>
    <string name="destination">Wisata</string>
    <string name="favorite_place_title">TEMPAT FAVORIT</string>
    <string name="mosque">Masjid</string>
    <string name="church">Gereja</string>
    <string name="others">Lain Lain</string>
    <string name="supermarket">Supermarket</string>
    <string name="hospital">Rumah Sakit</string>
    <string name="atm">ATM</string>
    <string name="bank">Bank</string>
    <string name="vihara">Vihara</string>
    <string name="stasiun">Stasiun</string>
    <string name="bandara">Bandara</string>
    <string name="search">Cari...</string>
    <string name="search_destination_nearby">Mencari Wisata Terdekat...</string>
    <string name="result_destination_nearby">Menampilkan Wisata Terdekat...</string>
    <string name="please_wait">Mohon Tunggu</string>
    <string name="not_found_nearby">Lokasi Tidak Ditemukan...</string>
    <string name="write_search_nearby">Tulis Lokasi yang dicari ...</string>
    <string name="search_atm_nearby">Mencari ATM Terdekat...</string>
    <string name="result_atm_nearby">Menampilkan ATM Terdekat...</string>
    <string name="search_hotel_nearby">Mencari Hotel Terdekat...</string>
    <string name="result_hotel_nearby">Menampilkan Hotel Terdekat...</string>
    <string name="search_restaurant_nearby">Mencari Restaurant Terdekat...</string>
    <string name="result_restaurant_nearby">Menampilkan Restaurant Terdekat...</string>
    <string name="success_add_favorite">Berhasil Menambahkan di Favorite</string>
    <string name="success_delete_fav">Berhasil Menghapus Data dari Favorite</string>
    <string name="delete_data_conf">Menghapus Data</string>
    <string name="delete_conf_2">Anda yakin ingin menghapus data ini?</string>
    <string name="already_exist">Data sudah ditambahkan di favorite</string>
    <string name="failed_get_data">Gagal mendapatkan Data</string>
    <string name="try_again">Silahkan login terlebih dahulu</string>
    <string name="email_valid">Massukan Email Yang Valid</string>
    <string name="min_password">Minimal 8 karakter</string>
    <string name="login_success">Login Berhasil</string>
    <string name="login_failed">Login Gagal, Silahkan Coba Lagi</string>
    <string name="success_facebook">Sign In dengan Facebook Berhasil</string>
    <string name="sign_in_google">Sign In dengan Google Berhasil</string>
    <string name="conf_exit">Apakah yakin ingin keluar?</string>
    <string name="name_signup">Nama Harus Diisi</string>
    <string name="sign_up_failed">Sign Up Gagal, Silahkan Coba Lagi</string>
    <string name="email_already">Email Telah Digunakan Akun Lain</string>
    <string name="input_email">Input Email</string>
    <string name="username_login">"Username:"</string>
    <string name="sign_in_failed">Sign In Failed, Please Tyr Again</string>
</resources>
