<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.fragment.Profile">
    <!--    Profile View-->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_profile_corners"
                    android:backgroundTint="#222222"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="30dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:background="@drawable/profile_share_background"
                        android:padding="5dp"
                        android:src="@drawable/ic_share" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/profile_place_holder"
                        app:civ_border_color="#FFFFFF"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:paddingLeft="3dp"
                        android:paddingTop="3dp"
                        android:paddingRight="3dp"
                        android:text="@string/profile_name"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="3dp"
                        android:paddingTop="3dp"
                        android:paddingRight="3dp"
                        android:text="Username"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/profile_logout_bottom"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/custom_logout_button"
                        android:text="@string/log_out_all_caps"
                        android:textColor="#FFFFFF"
                        android:textSize="10dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">
                <!--        Bio-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/details"
                        android:textColor="#232323"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1.5dp"
                        android:background="@drawable/details_profile" />

                    <TextView
                        android:id="@+id/profiles_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="15dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/not_found"
                        android:textColor="#232323"
                        android:textSize="14dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:layout_marginTop="10dp"
                        android:background="#B6B6B6" />
                </LinearLayout>
                <!--        INFO-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/info"
                        android:textColor="#232323"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1.5dp"
                        android:background="@drawable/details_profile" />
                    <!--            Company-->

                    <!--            Website-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:paddingTop="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/e_mail"
                            android:textColor="#232323"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/profile_website"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:padding="5dp"
                            android:text="@string/not_found"
                            android:textColor="#232323"
                            android:textSize="14dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="#D1D1D1" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#B6B6B6" />
                <!--        Organization-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/language_active"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/setting"
                        android:textColor="#232323"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1.5dp"
                        android:background="@drawable/details_profile"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/profile_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="15dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/language"
                            android:textColor="#232323"
                            android:textSize="14dp" />

                        <ImageButton
                            android:id="@+id/indonesia_language"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:layout_toLeftOf="@id/english_language"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/indonesia" />

                        <ImageButton
                            android:id="@+id/english_language"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentRight="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/english" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/contact_us"
                        android:textColor="#232323"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="150dp"
                        android:layout_height="1.5dp"
                        android:background="@drawable/details_profile"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    <TextView
                        android:id="@+id/profile_about_us"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="15dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/ayo_piknik"
                        android:textColor="#232323"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>